# OpenNotrium

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  Makefile  Makefile.am  Makefile.in  NotriumSDL.cbp  NotriumSDL.depend  NotriumSDL.layout  README  README.md  StdAfx.cpp  StdAfx.h  WinMain.cpp  blendstate.h  config.status  configure  configure.ac  credits.h  editor.cpp  editor.h  engine.cpp  engine.h  entities.cpp  entities.h  func.cpp  func.h  keys.h  main.cpp  main.h  memleaks.cpp  memleaks.h  mod_loader.cpp  mod_loader.h  (+16 more)
.github/workflows/: ci.yml
runtime_files/: cfg.cfg
runtime_files/data/Default/: notes.txt
runtime_files/readme/: changelog.html  readme.html  style.css
runtime_files/save/: delete.me
